# GPGPU_Template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  run.sh
example/: CMakeLists.txt  README.md  main.cpp
include/: simple_nn.hpp
src/: CMakeLists.txt  common_hip.hpp  simple_nn.hip
test/: CMakeLists.txt  test_kernel.cpp
